# docs/swagger.json
@@ -139,15 +139,6 @@
                         "description": "状态",
                         "name": "state",
                         "in": "formData"
-                    },
-                    {
-                        "maxLength": 100,
-                        "minLength": 1,
-                        "type": "string",
-                        "description": "创建者",
-                        "name": "created_by",
-                        "in": "formData",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -238,8 +229,7 @@
                         "type": "string",
                         "description": "修改者",
                         "name": "modified_by",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
                     }
                 ],
                 "responses": {
